k8s/clusters/prod-a/namespaces/network/traefik/add-ons/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: network-rfc1918-ips@kubernetescrd
spec:
  tls:
    - secretName: "tls.traefik-dashboard"
      hosts:
        - "traefik.${CLUSTER_DOMAIN}"
  rules:
    - host: traefik.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
